crates/reinhardt-commands/tests/ui/command_invalid_return.stderr
warning: unused import: `CommandError`
 --> tests/ui/command_invalid_return.rs:5:87
  |
5 | use reinhardt_commands::{BaseCommand, CommandContext, CommandArgument, CommandOption, CommandError};
  |                                                                                       ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0053]: method `execute` has an incompatible type for trait
  --> tests/ui/command_invalid_return.rs:11:1
   |
11 | #[async_trait]
   | ^^^^^^^^^^^^^^ expected `Result<(), CommandError>`, found `String`
   |
   = note: expected signature `fn(&'life0 InvalidReturnCommand, &'life1 CommandContext) -> Pin<Box<(dyn Future<Output = Result<(), CommandError>> + Send + 'async_trait)>>`
              found signature `fn(&'life0 InvalidReturnCommand, &'life1 CommandContext) -> Pin<Box<(dyn Future<Output = String> + Send + 'async_trait)>>`
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)
help: change the output type to match the trait
   |
11 - #[async_trait]
11 + Pin<Box<(dyn Future<Output = Result<(), CommandError>> + Send + 'async_trait)>>
   |
